Fixed banner on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -52,11 +52,9 @@ nav a:hover {
 
 .banner {
     width: 100%;
-    height: 150px;
     background-color: #3ad;
     color: #ffffff;
     padding: 0.5em 0 0 0;
-
     white-space: nowrap;
 }
 
